--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,23 @@ input[type=submit]:hover {
 #message {
 	height: 200px;
 }
+
+
+@media only screen and (max-width: 980px) {
+    body {
+        background-color: lightblue;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: lightblue;
+    }
+}
+
+
+@media only screen and (max-width: 640px) {
+    body {
+        background-color: lightblue;
+    }
+}
