--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,237 +1,253 @@
-
-/* All Pages Styling */
-
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-	font-family: "Arial"; "Helvetica Neue", Helvetica, sans-sereif;
-    background-image: url("../images/sakura.png");
-}
-
-h1 {
-	background-color: #4aaaa5;
-	font-family: "Georgia", Times, "Times New Roman"; serif;
-    color: white;
-    width: 220px;
-    padding: 15px;
-    text-align: center;
-    position: relative;
-    top: 88px;
-    right: -99px;
-}
-
-h2 {
-	color: #4aaaa5;
-
-}
-
-p {
-    float:left;
-    color: #777777;
-	font-family: "Georgia", Times, "Times New Roman"; serif;
-}
-
-footer {
-	clear: both;
-    background-color: #666666;
-	text-align: center;
-	padding: 20px;
-	font-size: 10px;
-    border-top-width: 10px;
-    border-top-color: #4aaaa5;
-    border-top-style: solid;
-    color: #e6dfdf;
-}
-
-#Connect {
-    float: right;
-    width: 450px;
-    background: white;
-    padding: 20px;
-    border: 1px solid: black;
-    margin: 40px 200px 40px 20px;
-}
-
-.links {
-    margin-top: 20px;
-}
-
-#Bar {
-    background-color: none;
-    margin-top: 0;
-    overflow: hidden;
-}
-
-
-/* Removes the <ul> bullets and browser default settings */
-ul {
-    list-style-type: none;
-	margin: 0;
-	padding: 10px;
-	overflow: hidden;
-	background-color: #333;
-}
-
-li {
-	float: right;
-	border-right: 1px solid #bbb;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-
-}
-
- li a:hover {
-    background-color: #111;
-}
-
-/* Index.html CSS Styles */
-#About {
-    float:left;
-    width: 600px;
-    background: white;
-    padding: 20px;
-    border: 1px solid: black;
-    margin: 40px 20px 40px 100px;
-    overflow: auto;
-}
-
-
-#ProfilePic {
-	width: 170px;
-	height: 200px;
-}
-
-/* Portfolio HTML CSS Styles*/
-
-#Portfolio {
-    float: left;
-    width: 600px;
-    background: white;
-    border-style: none;
-    margin: 40px 20px 40px 100px;
-    padding: 20px;
-    height: 700px;
-}
-
-.Pic {
-  /* relative positioning */
-  position: relative;
-  width: 200px;
-  height: 150px;
-  background: #2db34a;
-  border: 2px solid black;
-  margin: 20px;
-}
-
-.lab {
-    background-color: #4aaaa5;
-    font-family: "Georgia", Times, "Times New Roman"; serif;
-    color: white;
-    width: 200px;
-    padding: 15px;
-    text-align: center;
-   
-}
-
-.lab1 {
-    position: relative;
-    top: -472px;
-    left: 20px;  
-}
-
-.lab2 {
-    position: relative;
-    top: -519px;
-    left: 265px;  
-}
-
-.lab3 {
-    position: relative;
-    top: -374px;
-    left: 20px;  
-}
-
-.lab4 {
-    position: relative;
-    top: -421px;
-    left: 265px;  
-}
-
-.lab5 {
-    position: relative;
-    top: -275px;
-    left: 20px;  
-}
-
-/* Contact Form HTML CSS Styles*/
-
-#Contact {
-    float: left;
-    width: 600px;
-    background: white;
-    padding: 20px;
-    margin: 40px 20px 40px 100px;
-}
-
-input[type=text], textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-}
-
-input[type=submit] {
-    background-color: #4aaaa5;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #4CAF50;
-    color: white;
+	background: url("../images/concrete_seamless.png");
+	font-size: 18px;
+	line-height: 34px;
+	font-family: "Arial", 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777;
 }
 
 .container {
-    border-radius: 5px;
-    background-color: white;
-    padding: 20px;
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+	clear: both;
 }
 
-#message {
+h1, h2, h3, p {
+	margin-bottom: 20px;
+}
+
+p:last-child {
+	margin-bottom: 0;
+}
+
+h1, h2, h3 {
+	font-family: "Georgia", Times, Times New Roman, serif;
+	font-weight: 700;
+	color: #4aaaa5;
+}
+
+h1 {
+	font-size: 30px;
+	line-height: 49px;
+	border-bottom: 3px solid #ddd;
+	padding-bottom: 20px;
+}
+
+h2, h3 {
+	font-size: 22px;
+}
+
+
+/* header */
+
+#masthead {
+	background: #fff;
+	margin: 0 0 30px;
+	z-index: 99;
+	color: #fff;
+	overflow: auto;
+	border-bottom: 2px solid #ccc;
+	position: fixed;
+	width: 100%;
+}
+
+#logo {
+	width: 250px;
+	height: 90px;
+	background: #4aaaa5;
+	float: left;
+	font-family: "Georgia", Times, Times New Roman, serif;
+	text-align: center;
+	line-height: 90px;
+	color: #fff;
+	font-weight: 700;
+	font-size: 38px;
+	text-decoration: none;
+}
+
+nav {
+	float: right;
+	margin-top: 25px;
+}
+
+nav a {
+	color: #999;
+	text-decoration: none;
+	margin-left: 15px;
+	display: inline-block;
+	border-left: 1px solid #efefef;
+	padding-left: 15px;
+	line-height: 18px;
+}
+
+nav a:first-child {
+	border-left: 0 none;
+}
+
+/*main*/
+
+#main-container {
+	padding-top: 130px;
+}
+
+.main-section {
+	background: #fff;
+	padding: 30px;
+	margin: 0 0 40px 0;
+	width: 100%;
+	max-width: 650px;
+	float: left;
+	border: 1px solid #ddd;
+}
+
+.auth-image {
+	width: 200px;
+	height: 180px;
+	/*height: auto;*/
+	margin-top: 10px;
+	float: left;
+	margin-right: 25px;
+}
+
+/*sidebar*/
+
+.sidebar {
+	background: #fff;
+	padding: 30px;
+	width: 100%;
+	max-width: 270px;
+	float: right;
+	border: 1px solid #ddd;
+	margin-bottom: 20px;
+}
+
+
+h3, .sidebar, h2 {
+	border-bottom: 2px solid #eee;
+	padding-bottom: 20px;
+	margin-bottom: 15px;
+	line-height: 22px;
+}
+
+.social {
+	width: 62px;
+	height: 62px;
+	margin-top: 8px;
+	margin-right: 5px;
+}
+
+.social:last-child {
+	margin-right: 0;
+}
+
+
+/*footer*/
+
+footer {
+	background: #666;
+	color: #fff;
+	padding: 30px 0;
+	clear: both;
+	border-top: 8px solid #4aaaa5;
+	color: #ccc;
+	font-size: 12px;
+	text-align: center;
+}	
+
+/*portfolio*/
+
+.work {
+	width: 274px;
+	overflow: auto;
+	position: relative;
+	float: left;
+	margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+	margin-right: 40px;
+}
+
+.work img {
+	width: 100%;
+	border: 0 none;
+	opacity: .8;
+}
+
+.work h3 {
+	border-bottom: 0;
+	background: #4aaaa5;
+	color: #fff;
+	text-align: center;
+	position: absolute;
+	bottom: 20px;
+	padding: 15px;
+	width: 100%;
+	line-height: 30px;
+	margin-bottom: 0;
+	font-weight: 300;
+}
+
+/*contact*/
+
+#contact-form ul {
+	margin-bottom: 20px;
+}
+
+#contact-form li {
+	margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+	display: block;
+	width: 100%
+}
+
+input[type=text],
+input[type=email],
+textarea {
+	height: 35px;
+	border: 1px solid #ddd;
+	padding: 0 10px;
+	font-size: 14px;
+}
+
+textarea {
 	height: 200px;
 }
 
+input[type=submit] {
+	background: #4aaaa5;
+	border: 0 none;
+	color: #fff;
+	font-size: 18px;
+	padding: 10px 30px;
+	cursor: pointer;
+}	
 
 @media only screen and (max-width: 980px) {
-    body {
-        background-color: lightblue;
+    #masterhead {
+        background: #4aaaa5;
     }
 }
 
 @media only screen and (max-width: 768px) {
-    body {
-        background-color: lightblue;
+    #masterhead {
+        background: #4aaaa5;
     }
 }
 
 
 @media only screen and (max-width: 640px) {
-    body {
-        background-color: lightblue;
+    #masterhead {
+        background: #4aaaa5;
     }
 }
